--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetTests/MoviesToGetPage_ForUserAccount_IsLoadedCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetTests/MoviesToGetPage_ForUserAccount_IsLoadedCorrectly.html
@@ -22,7 +22,12 @@
 
 <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link text-dark" href="/Identity/Account/Login">Login</a>
+            <a class="nav-link text-dark" title="Manage" href="/Identity/Account/Manage">Fake User</a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" action="/Identity/Account/Logout?returnUrl=%2F" method="post">
+                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <input name="__RequestVerificationToken" type="hidden" value="Some AFT Value" /></form>
         </li>
 </ul>
 
