Fix alternate text for poster images

--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForAdministratorAccountAndMovieWithAllInfoFilled_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForAdministratorAccountAndMovieWithAllInfoFilled_ReturnsCorrectPage.html
@@ -57,7 +57,7 @@
 <div class="single-movie-item">
     
 <div class="movie-info">
-    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_111543.jpg" alt="Poster for movie &quot;Model.Title&quot;" />
+    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_111543.jpg" alt="Poster for movie &quot;&#x422;&#x435;&#x43C;&#x43D;&#x44B;&#x439; &#x440;&#x44B;&#x446;&#x430;&#x440;&#x44C;&quot;" />
     <div class="movie-info-details">
         <a class="movie-info-title" href="https://www.kinopoisk.ru/film/111543/">&#x422;&#x435;&#x43C;&#x43D;&#x44B;&#x439; &#x440;&#x44B;&#x446;&#x430;&#x440;&#x44C;</a>
         <table class="movie-info-table">
