--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieDeletion_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieDeletion_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -57,7 +57,7 @@
 <div class="single-movie-item">
     
 <div class="movie-info">
-    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_342.jpg" alt="Poster for movie &quot;Model.Title&quot;" />
+    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_342.jpg" alt="Poster for movie &quot;&#x41A;&#x440;&#x438;&#x43C;&#x438;&#x43D;&#x430;&#x43B;&#x44C;&#x43D;&#x43E;&#x435; &#x447;&#x442;&#x438;&#x432;&#x43E;&quot;" />
     <div class="movie-info-details">
         <a class="movie-info-title" href="https://www.kinopoisk.ru/film/342/">&#x41A;&#x440;&#x438;&#x43C;&#x438;&#x43D;&#x430;&#x43B;&#x44C;&#x43D;&#x43E;&#x435; &#x447;&#x442;&#x438;&#x432;&#x43E;</a>
         <table class="movie-info-table">
