--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -70,7 +70,7 @@
                 <div class="movie-info-and-actions">
                     
 <div class="movie-info">
-    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_474.jpg" alt="Poster for movie &quot;Model.Title&quot;" />
+    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_474.jpg" alt="Poster for movie &quot;&#x413;&#x43B;&#x430;&#x434;&#x438;&#x430;&#x442;&#x43E;&#x440;&quot;" />
     <div class="movie-info-details">
         <a class="movie-info-title" href="https://www.kinopoisk.ru/film/474/">&#x413;&#x43B;&#x430;&#x434;&#x438;&#x430;&#x442;&#x43E;&#x440;</a>
         <table class="movie-info-table">
@@ -145,7 +145,7 @@
                 <div class="movie-info-and-actions">
                     
 <div class="movie-info">
-    <img class="movie-info-poster" src="/img/no-poster.jpg" alt="Poster for movie &quot;Model.Title&quot;" />
+    <img class="movie-info-poster" src="/img/no-poster.jpg" alt="Poster for movie &quot;Movie to see with missing data&quot;" />
     <div class="movie-info-details">
         <a class="movie-info-title" href="https://www.kinopoisk.ru/film/888/">Movie to see with missing data</a>
         <table class="movie-info-table">
