--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieDeletion_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieDeletion_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -57,7 +57,7 @@
 <div class="single-movie-item">
     
 <div class="movie-info">
-    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_474.jpg" alt="Poster for movie &quot;Model.Title&quot;" />
+    <img class="movie-info-poster" src="https://st.kp.yandex.net/images/film_iphone/iphone360_474.jpg" alt="Poster for movie &quot;&#x413;&#x43B;&#x430;&#x434;&#x438;&#x430;&#x442;&#x43E;&#x440;&quot;" />
     <div class="movie-info-details">
         <a class="movie-info-title" href="https://www.kinopoisk.ru/film/474/">&#x413;&#x43B;&#x430;&#x434;&#x438;&#x430;&#x442;&#x43E;&#x440;</a>
         <table class="movie-info-table">
