--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForAdministratorAccount_DeletesMovie.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForAdministratorAccount_DeletesMovie.html
@@ -73,7 +73,7 @@
                 <div class="movie-info-and-actions">
                     
 <div class="movie-info">
-    <img class="movie-info-poster" src="/img/no-poster.jpg" alt="Poster for movie &quot;Model.Title&quot;" />
+    <img class="movie-info-poster" src="/img/no-poster.jpg" alt="Poster for movie &quot;Movie to see with missing data&quot;" />
     <div class="movie-info-details">
         <a class="movie-info-title" href="https://www.kinopoisk.ru/film/888/">Movie to see with missing data</a>
         <table class="movie-info-table">
