--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieAdding_ForAdministratorAccountAndMovieWithAllInfoMissing_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieAdding_ForAdministratorAccountAndMovieWithAllInfoMissing_ReturnsCorrectPage.html
@@ -57,7 +57,9 @@
 <div class="single-movie-item">
     
 <div class="movie-info">
-    <img class="movie-info-poster" src="/img/no-poster.jpg" alt="Poster for movie &quot;Movie Without Any Info&quot;" />
+    <a href="https://www.kinopoisk.ru/film/13/">
+        <img class="movie-info-poster" src="/img/no-poster.jpg" alt="Poster for movie &quot;Movie Without Any Info&quot;" />
+    </a>
     <div class="movie-info-details">
         <a class="movie-info-title" href="https://www.kinopoisk.ru/film/13/">Movie Without Any Info</a>
         <table class="movie-info-table">
