--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieDeletion_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieDeletion_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -22,7 +22,7 @@
 
 <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link text-dark" title="Manage" href="/Identity/Account/Manage">Fake User</a>
+            <a class="nav-link text-dark" title="Manage" href="/Identity/Account/Manage">SomeAdministrator@test.com</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" action="/Identity/Account/Logout?returnUrl=%2F" method="post">
