--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForAdministratorAccount_DeletesMovie.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForAdministratorAccount_DeletesMovie.html
@@ -41,6 +41,9 @@
         <li class="nav-item">
             <a class="nav-link text-dark" href="/Users">Manage Users</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" href="/Roles">Manage Roles</a>
+        </li>
                     </ul>
                 </div>
             </div>
