Fix assignment of role permissions

--- a/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/EditRole_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/EditRole_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -66,57 +66,57 @@
         <tr>
             <td>Permissions.MoviesToGet.Add</td>
             <td class="text-center">
-                <input type="checkbox" checked="checked" data-val="true" data-val-required="The Assigned field is required." id="z0__Assigned" name="[0].Assigned" value="true" />
-                <input type="hidden" id="z0__PermissionName" name="[0].PermissionName" value="Permissions.MoviesToGet.Add" />
+                <input type="checkbox" checked="checked" data-val="true" data-val-required="The Assigned field is required." id="Permissions_0__Assigned" name="Permissions[0].Assigned" value="true" />
+                <input type="hidden" id="Permissions_0__PermissionName" name="Permissions[0].PermissionName" value="Permissions.MoviesToGet.Add" />
             </td>
         </tr>
         <tr>
             <td>Permissions.MoviesToGet.Read</td>
             <td class="text-center">
-                <input type="checkbox" checked="checked" data-val="true" data-val-required="The Assigned field is required." id="z1__Assigned" name="[1].Assigned" value="true" />
-                <input type="hidden" id="z1__PermissionName" name="[1].PermissionName" value="Permissions.MoviesToGet.Read" />
+                <input type="checkbox" checked="checked" data-val="true" data-val-required="The Assigned field is required." id="Permissions_1__Assigned" name="Permissions[1].Assigned" value="true" />
+                <input type="hidden" id="Permissions_1__PermissionName" name="Permissions[1].PermissionName" value="Permissions.MoviesToGet.Read" />
             </td>
         </tr>
         <tr>
             <td>Permissions.MoviesToGet.MoveToMoviesToSee</td>
             <td class="text-center">
-                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="z2__Assigned" name="[2].Assigned" value="true" />
-                <input type="hidden" id="z2__PermissionName" name="[2].PermissionName" value="Permissions.MoviesToGet.MoveToMoviesToSee" />
+                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="Permissions_2__Assigned" name="Permissions[2].Assigned" value="true" />
+                <input type="hidden" id="Permissions_2__PermissionName" name="Permissions[2].PermissionName" value="Permissions.MoviesToGet.MoveToMoviesToSee" />
             </td>
         </tr>
         <tr>
             <td>Permissions.MoviesToGet.Delete</td>
             <td class="text-center">
-                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="z3__Assigned" name="[3].Assigned" value="true" />
-                <input type="hidden" id="z3__PermissionName" name="[3].PermissionName" value="Permissions.MoviesToGet.Delete" />
+                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="Permissions_3__Assigned" name="Permissions[3].Assigned" value="true" />
+                <input type="hidden" id="Permissions_3__PermissionName" name="Permissions[3].PermissionName" value="Permissions.MoviesToGet.Delete" />
             </td>
         </tr>
         <tr>
             <td>Permissions.MoviesToSee.Add</td>
             <td class="text-center">
-                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="z4__Assigned" name="[4].Assigned" value="true" />
-                <input type="hidden" id="z4__PermissionName" name="[4].PermissionName" value="Permissions.MoviesToSee.Add" />
+                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="Permissions_4__Assigned" name="Permissions[4].Assigned" value="true" />
+                <input type="hidden" id="Permissions_4__PermissionName" name="Permissions[4].PermissionName" value="Permissions.MoviesToSee.Add" />
             </td>
         </tr>
         <tr>
             <td>Permissions.MoviesToSee.Read</td>
             <td class="text-center">
-                <input type="checkbox" checked="checked" data-val="true" data-val-required="The Assigned field is required." id="z5__Assigned" name="[5].Assigned" value="true" />
-                <input type="hidden" id="z5__PermissionName" name="[5].PermissionName" value="Permissions.MoviesToSee.Read" />
+                <input type="checkbox" checked="checked" data-val="true" data-val-required="The Assigned field is required." id="Permissions_5__Assigned" name="Permissions[5].Assigned" value="true" />
+                <input type="hidden" id="Permissions_5__PermissionName" name="Permissions[5].PermissionName" value="Permissions.MoviesToSee.Read" />
             </td>
         </tr>
         <tr>
             <td>Permissions.MoviesToSee.MarkAsSeen</td>
             <td class="text-center">
-                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="z6__Assigned" name="[6].Assigned" value="true" />
-                <input type="hidden" id="z6__PermissionName" name="[6].PermissionName" value="Permissions.MoviesToSee.MarkAsSeen" />
+                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="Permissions_6__Assigned" name="Permissions[6].Assigned" value="true" />
+                <input type="hidden" id="Permissions_6__PermissionName" name="Permissions[6].PermissionName" value="Permissions.MoviesToSee.MarkAsSeen" />
             </td>
         </tr>
         <tr>
             <td>Permissions.MoviesToSee.Delete</td>
             <td class="text-center">
-                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="z7__Assigned" name="[7].Assigned" value="true" />
-                <input type="hidden" id="z7__PermissionName" name="[7].PermissionName" value="Permissions.MoviesToSee.Delete" />
+                <input type="checkbox" data-val="true" data-val-required="The Assigned field is required." id="Permissions_7__Assigned" name="Permissions[7].Assigned" value="true" />
+                <input type="hidden" id="Permissions_7__PermissionName" name="Permissions[7].PermissionName" value="Permissions.MoviesToSee.Delete" />
             </td>
         </tr>
     </tbody>
@@ -125,7 +125,7 @@
     <input type="hidden" id="RoleId" name="RoleId" value="5eb995ef4083c272a80ca308" />
     <button class="btn btn-primary" type="submit">Update</button>
     <a class="btn btn-secondary" href="/Roles">Cancel</a>
-<input name="__RequestVerificationToken" type="hidden" value="Some AFT Value" /><input name="[0].Assigned" type="hidden" value="false" /><input name="[1].Assigned" type="hidden" value="false" /><input name="[2].Assigned" type="hidden" value="false" /><input name="[3].Assigned" type="hidden" value="false" /><input name="[4].Assigned" type="hidden" value="false" /><input name="[5].Assigned" type="hidden" value="false" /><input name="[6].Assigned" type="hidden" value="false" /><input name="[7].Assigned" type="hidden" value="false" /></form>
+<input name="__RequestVerificationToken" type="hidden" value="Some AFT Value" /><input name="Permissions[0].Assigned" type="hidden" value="false" /><input name="Permissions[1].Assigned" type="hidden" value="false" /><input name="Permissions[2].Assigned" type="hidden" value="false" /><input name="Permissions[3].Assigned" type="hidden" value="false" /><input name="Permissions[4].Assigned" type="hidden" value="false" /><input name="Permissions[5].Assigned" type="hidden" value="false" /><input name="Permissions[6].Assigned" type="hidden" value="false" /><input name="Permissions[7].Assigned" type="hidden" value="false" /></form>
 
         </main>
     </div>
