Prevent edit and deletion of built-in administrator role

--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -141,10 +141,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovingToSee/5eac4f407a15596e90c09d7b">To see</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovingToSee/5eac4f407a15596e90c09d7b">To see</a>
                             </div>
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovieDeletion/5eac4f407a15596e90c09d7b">Delete</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovieDeletion/5eac4f407a15596e90c09d7b">Delete</a>
                             </div>
                     </div>
                 </div>
@@ -199,10 +199,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovingToSee/5ead62931969f95b005c1f68">To see</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovingToSee/5ead62931969f95b005c1f68">To see</a>
                             </div>
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovieDeletion/5ead62931969f95b005c1f68">Delete</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovieDeletion/5ead62931969f95b005c1f68">Delete</a>
                             </div>
                     </div>
                 </div>
