--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/AddMovie_ForAdministratorAccountAndMovieWithAllInfoMissing_AddsMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/AddMovie_ForAdministratorAccountAndMovieWithAllInfoMissing_AddsMovieCorrectly.html
@@ -141,10 +141,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToSee/ConfirmMarkingAsSeen/5ead62d14be68246b45bba82">Mark as seen</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMarkingAsSeen/5ead62d14be68246b45bba82">Mark as seen</a>
                             </div>
                             <div>
-                                <a href="/MoviesToSee/ConfirmMovieDeletion/5ead62d14be68246b45bba82">Delete</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMovieDeletion/5ead62d14be68246b45bba82">Delete</a>
                             </div>
                     </div>
                 </div>
@@ -199,10 +199,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToSee/ConfirmMarkingAsSeen/5ead645f6a24e267d02651d5">Mark as seen</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMarkingAsSeen/5ead645f6a24e267d02651d5">Mark as seen</a>
                             </div>
                             <div>
-                                <a href="/MoviesToSee/ConfirmMovieDeletion/5ead645f6a24e267d02651d5">Delete</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMovieDeletion/5ead645f6a24e267d02651d5">Delete</a>
                             </div>
                     </div>
                 </div>
@@ -257,10 +257,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToSee/ConfirmMarkingAsSeen/5eb706d725d7b94ebc88af81">Mark as seen</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMarkingAsSeen/5eb706d725d7b94ebc88af81">Mark as seen</a>
                             </div>
                             <div>
-                                <a href="/MoviesToSee/ConfirmMovieDeletion/5eb706d725d7b94ebc88af81">Delete</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMovieDeletion/5eb706d725d7b94ebc88af81">Delete</a>
                             </div>
                     </div>
                 </div>
