--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/DeleteMovie_ForAdministratorAccount_DeletesMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/DeleteMovie_ForAdministratorAccount_DeletesMovieCorrectly.html
@@ -122,10 +122,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToSee/ConfirmMarkingAsSeen/5ead645f6a24e267d02651d5">Mark as seen</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMarkingAsSeen/5ead645f6a24e267d02651d5">Mark as seen</a>
                             </div>
                             <div>
-                                <a href="/MoviesToSee/ConfirmMovieDeletion/5ead645f6a24e267d02651d5">Delete</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMovieDeletion/5ead645f6a24e267d02651d5">Delete</a>
                             </div>
                     </div>
                 </div>
