--- a/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -66,10 +66,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Roles/EditRole/5eb995ec4083c272a80ca306">Edit</a>
+                                <a class="btn-link disabled" href="/Roles/EditRole/5eb995ec4083c272a80ca306">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca306">Delete</a>
+                                <a class="btn-link disabled" href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca306">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -85,10 +85,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Roles/EditRole/5eb995ec4083c272a80ca307">Edit</a>
+                                <a class="btn-link" href="/Roles/EditRole/5eb995ec4083c272a80ca307">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca307">Delete</a>
+                                <a class="btn-link" href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca307">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -104,10 +104,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Roles/EditRole/5eb995ef4083c272a80ca308">Edit</a>
+                                <a class="btn-link" href="/Roles/EditRole/5eb995ef4083c272a80ca308">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Roles/ConfirmRoleDeletion/5eb995ef4083c272a80ca308">Delete</a>
+                                <a class="btn-link" href="/Roles/ConfirmRoleDeletion/5eb995ef4083c272a80ca308">Delete</a>
                             </div>
                         </div>
                     </div>
