--- a/tests/MovieLibrary.IntegrationTests/snapshots/UsersInitializerTests/Access_ForDefaultAdministratorFromLocalhost_IsAllowed.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/UsersInitializerTests/Access_ForDefaultAdministratorFromLocalhost_IsAllowed.html
@@ -60,10 +60,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Users/EditUser/5eb706d725d7b94ebc88af83">Edit</a>
+                                <a class="btn-link" href="/Users/EditUser/5eb706d725d7b94ebc88af83">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Users/ConfirmUserDeletion/5eb706d725d7b94ebc88af83">Delete</a>
+                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb706d725d7b94ebc88af83">Delete</a>
                             </div>
                         </div>
                     </div>
