--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/AddMovie_ForAdministratorAccountAndMovieWithAllInfoFilled_AddsMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/AddMovie_ForAdministratorAccountAndMovieWithAllInfoFilled_AddsMovieCorrectly.html
@@ -144,10 +144,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovingToSee/5eac4f407a15596e90c09d7b">To see</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovingToSee/5eac4f407a15596e90c09d7b">To see</a>
                             </div>
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovieDeletion/5eac4f407a15596e90c09d7b">Delete</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovieDeletion/5eac4f407a15596e90c09d7b">Delete</a>
                             </div>
                     </div>
                 </div>
@@ -202,10 +202,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovingToSee/5ead62931969f95b005c1f68">To see</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovingToSee/5ead62931969f95b005c1f68">To see</a>
                             </div>
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovieDeletion/5ead62931969f95b005c1f68">Delete</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovieDeletion/5ead62931969f95b005c1f68">Delete</a>
                             </div>
                     </div>
                 </div>
@@ -279,10 +279,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovingToSee/5eb706d725d7b94ebc88af81">To see</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovingToSee/5eb706d725d7b94ebc88af81">To see</a>
                             </div>
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovieDeletion/5eb706d725d7b94ebc88af81">Delete</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovieDeletion/5eb706d725d7b94ebc88af81">Delete</a>
                             </div>
                     </div>
                 </div>
