--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/DeleteMovie_ForAdministratorAccount_DeletesMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/DeleteMovie_ForAdministratorAccount_DeletesMovieCorrectly.html
@@ -122,10 +122,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovingToSee/5ead62931969f95b005c1f68">To see</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovingToSee/5ead62931969f95b005c1f68">To see</a>
                             </div>
                             <div>
-                                <a href="/MoviesToGet/ConfirmMovieDeletion/5ead62931969f95b005c1f68">Delete</a>
+                                <a class="btn-link" href="/MoviesToGet/ConfirmMovieDeletion/5ead62931969f95b005c1f68">Delete</a>
                             </div>
                     </div>
                 </div>
