--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -138,10 +138,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToSee/ConfirmMarkingAsSeen/5ead62d14be68246b45bba82">Mark as seen</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMarkingAsSeen/5ead62d14be68246b45bba82">Mark as seen</a>
                             </div>
                             <div>
-                                <a href="/MoviesToSee/ConfirmMovieDeletion/5ead62d14be68246b45bba82">Delete</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMovieDeletion/5ead62d14be68246b45bba82">Delete</a>
                             </div>
                     </div>
                 </div>
@@ -196,10 +196,10 @@
 
                     <div class="movie-actions">
                             <div>
-                                <a href="/MoviesToSee/ConfirmMarkingAsSeen/5ead645f6a24e267d02651d5">Mark as seen</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMarkingAsSeen/5ead645f6a24e267d02651d5">Mark as seen</a>
                             </div>
                             <div>
-                                <a href="/MoviesToSee/ConfirmMovieDeletion/5ead645f6a24e267d02651d5">Delete</a>
+                                <a class="btn-link" href="/MoviesToSee/ConfirmMovieDeletion/5ead645f6a24e267d02651d5">Delete</a>
                             </div>
                     </div>
                 </div>
