--- a/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/UpdateRole_ForAdministratorAccount_UpdatesRoleCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/UpdateRole_ForAdministratorAccount_UpdatesRoleCorrectly.html
@@ -69,10 +69,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Roles/EditRole/5eb995ec4083c272a80ca306">Edit</a>
+                                <a class="btn-link disabled" href="/Roles/EditRole/5eb995ec4083c272a80ca306">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca306">Delete</a>
+                                <a class="btn-link disabled" href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca306">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -88,10 +88,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Roles/EditRole/5eb995ec4083c272a80ca307">Edit</a>
+                                <a class="btn-link" href="/Roles/EditRole/5eb995ec4083c272a80ca307">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca307">Delete</a>
+                                <a class="btn-link" href="/Roles/ConfirmRoleDeletion/5eb995ec4083c272a80ca307">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -107,10 +107,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Roles/EditRole/5eb995ef4083c272a80ca308">Edit</a>
+                                <a class="btn-link" href="/Roles/EditRole/5eb995ef4083c272a80ca308">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Roles/ConfirmRoleDeletion/5eb995ef4083c272a80ca308">Delete</a>
+                                <a class="btn-link" href="/Roles/ConfirmRoleDeletion/5eb995ef4083c272a80ca308">Delete</a>
                             </div>
                         </div>
                     </div>
