--- a/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -66,10 +66,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Users/EditUser/5eb7eb9e1fdada19f4eb59b0">Edit</a>
+                                <a class="btn-link" href="/Users/EditUser/5eb7eb9e1fdada19f4eb59b0">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Users/ConfirmUserDeletion/5eb7eb9e1fdada19f4eb59b0">Delete</a>
+                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb7eb9e1fdada19f4eb59b0">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -85,10 +85,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Users/EditUser/5eb7eb9f1fdada19f4eb59b1">Edit</a>
+                                <a class="btn-link" href="/Users/EditUser/5eb7eb9f1fdada19f4eb59b1">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Users/ConfirmUserDeletion/5eb7eb9f1fdada19f4eb59b1">Delete</a>
+                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb7eb9f1fdada19f4eb59b1">Delete</a>
                             </div>
                         </div>
                     </div>
