--- a/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/PostRegisterUser_ForAdministratorAccount_RegistersUserCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/PostRegisterUser_ForAdministratorAccount_RegistersUserCorrectly.html
@@ -69,10 +69,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Users/EditUser/5eb7eb9e1fdada19f4eb59b0">Edit</a>
+                                <a class="btn-link" href="/Users/EditUser/5eb7eb9e1fdada19f4eb59b0">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Users/ConfirmUserDeletion/5eb7eb9e1fdada19f4eb59b0">Delete</a>
+                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb7eb9e1fdada19f4eb59b0">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -88,10 +88,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Users/EditUser/5eb7eb9f1fdada19f4eb59b1">Edit</a>
+                                <a class="btn-link" href="/Users/EditUser/5eb7eb9f1fdada19f4eb59b1">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Users/ConfirmUserDeletion/5eb7eb9f1fdada19f4eb59b1">Delete</a>
+                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb7eb9f1fdada19f4eb59b1">Delete</a>
                             </div>
                         </div>
                     </div>
@@ -107,10 +107,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a href="/Users/EditUser/5eb706d725d7b94ebc88af81">Edit</a>
+                                <a class="btn-link" href="/Users/EditUser/5eb706d725d7b94ebc88af81">Edit</a>
                             </div>
                             <div class="col">
-                                <a href="/Users/ConfirmUserDeletion/5eb706d725d7b94ebc88af81">Delete</a>
+                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb706d725d7b94ebc88af81">Delete</a>
                             </div>
                         </div>
                     </div>
