Prevent deletion of last administrator

--- a/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/Index_ForAdministratorAccount_ReturnsCorrectPage.html
@@ -69,7 +69,7 @@
                                 <a class="btn-link" href="/Users/EditUser/5eb7eb9e1fdada19f4eb59b0">Edit</a>
                             </div>
                             <div class="col">
-                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb7eb9e1fdada19f4eb59b0">Delete</a>
+                                <a class="btn-link disabled" href="/Users/ConfirmUserDeletion/5eb7eb9e1fdada19f4eb59b0">Delete</a>
                             </div>
                         </div>
                     </div>
