--- a/tests/MovieLibrary.IntegrationTests/snapshots/UsersInitializerTests/Access_ForDefaultAdministratorFromLocalhost_IsAllowed.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/UsersInitializerTests/Access_ForDefaultAdministratorFromLocalhost_IsAllowed.html
@@ -63,7 +63,7 @@
                                 <a class="btn-link disabled" href="/Users/EditUser/5eb706d725d7b94ebc88af83">Edit</a>
                             </div>
                             <div class="col">
-                                <a class="btn-link" href="/Users/ConfirmUserDeletion/5eb706d725d7b94ebc88af83">Delete</a>
+                                <a class="btn-link disabled" href="/Users/ConfirmUserDeletion/5eb706d725d7b94ebc88af83">Delete</a>
                             </div>
                         </div>
                     </div>
