--- a/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/PostCreateRole_ForPrivilegedUser_CreatesRoleCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/RolesControllerTests/PostCreateRole_ForPrivilegedUser_CreatesRoleCorrectly.html
@@ -53,9 +53,13 @@
         <main role="main" class="pb-3">
             
 
-    <div class="alert alert-success" role="alert">
-        The role was added successfully.
-    </div>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    The role was added successfully.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
 
 
