--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/MoveToMoviesToSee_ForPrivilegedUser_MovesMovieToMoviesToSee.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/MoveToMoviesToSee_ForPrivilegedUser_MovesMovieToMoviesToSee.html
@@ -54,9 +54,13 @@
             
 
 
-    <div class="alert alert-success" role="alert">
-        The movie was moved successfully.
-    </div>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    The movie was moved successfully.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
 
     <form method="post" action="/MoviesToGet/ConfirmMovieAdding">
