--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForPrivilegedUser_DeletesMovie.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForPrivilegedUser_DeletesMovie.html
@@ -54,9 +54,13 @@
             
 
 
-    <div class="alert alert-success" role="alert">
-        The movie was marked as seen.
-    </div>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    The movie was marked as seen.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
 
     <form method="post" action="/MoviesToSee/ConfirmMovieAdding">
