--- a/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/DeleteUser_ForPrivilegedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/DeleteUser_ForPrivilegedUser_ReturnsCorrectPage.html
@@ -55,9 +55,13 @@
 
 
 
-    <div class="alert alert-success" role="alert">
-        The user was deleted successfully.
-    </div>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    The user was deleted successfully.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
 <ul class="list-group">
         <li class="list-group-item">
