Adjust error message for movie URL validation

--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/Index_ForLimitedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/Index_ForLimitedUser_ReturnsCorrectPage.html
@@ -55,7 +55,7 @@
             <div><span class="text-danger field-validation-valid" data-valmsg-for="NewMovieToGet.MovieUri" data-valmsg-replace="true"></span></div>
             <div class="input-group">
                 <div class="input-group-append">
-                    <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="The MovieUri field is required." id="NewMovieToGet_MovieUri" name="NewMovieToGet.MovieUri" value="" />
+                    <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="Please enter movie URL" id="NewMovieToGet_MovieUri" name="NewMovieToGet.MovieUri" value="" />
                     <button class="btn btn-primary" type="submit">Add</button>
                 </div>
             </div>
