--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieAdding_ForInvalidModel_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieAdding_ForInvalidModel_ReturnsCorrectPage.html
@@ -58,10 +58,10 @@
 
     <form method="post" action="/MoviesToSee/ConfirmMovieAdding">
         <div class="form-group">
-            <div><span class="text-danger field-validation-error" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true">The MovieUri field is required.</span></div>
+            <div><span class="text-danger field-validation-error" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true">Please enter movie URL</span></div>
             <div class="input-group">
                 <div class="input-group-append">
-                    <input class="form-control input-validation-error" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="The MovieUri field is required." id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
+                    <input class="form-control input-validation-error" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="Please enter movie URL" id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
                     <button class="btn btn-primary" type="submit">Add</button>
                 </div>
             </div>
