--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForPrivilegedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForPrivilegedUser_ReturnsCorrectPage.html
@@ -61,7 +61,7 @@
             <div><span class="text-danger field-validation-valid" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true"></span></div>
             <div class="input-group">
                 <div class="input-group-append">
-                    <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="The MovieUri field is required." id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
+                    <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="Please enter movie URL" id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
                     <button class="btn btn-primary" type="submit">Add</button>
                 </div>
             </div>
